--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
+    "react-hot-toast": "^2.4.1",
     "react-intersection-observer": "^9.13.0",
     "react-router-dom": "^6.24.1",
     "swiper": "^11.1.4",
